--- a/html/www/Ajuda/index.html
+++ b/html/www/Ajuda/index.html
@@ -40,6 +40,16 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
         <script src="../../static/js/site-prepshiptool/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108398039-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-108398039-1');
+        </script>
     </head>
     <body data-spy="scroll" data-target="#main-navbar" class="ajuda">
 		<!--<div class='preloader'><div class='loaded'>&nbsp;</div></div>-->
