--- a/html/www/index.html
+++ b/html/www/index.html
@@ -40,6 +40,16 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
         <script src="../static/js/site-prepshiptool/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108398039-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-108398039-1');
+        </script>
     </head>
     <body data-spy="scroll" data-target="#main-navbar" class="home">
 		<!--<div class='preloader'><div class='loaded'>&nbsp;</div></div>-->
@@ -252,6 +262,8 @@
                     </div>
                 </div>
 
+
+
                 <div class="feature-wrapper">
                     <div class="row">
 
@@ -262,12 +274,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="features-content"> 
-                                <h4><i class="fa fa-envelope"></i><span>Emails em todos os processos</span></h4>
-                                <p>Em todas as etapas do processo de envio e cadastro de produtos os usuários e administradores sempre receberão emails informativos.</p>
-                            </div>
-                        </div>
+
 
                         <div class="col-md-4 col-sm-6 col-xs-12">
                             <div class="features-content"> 
@@ -315,6 +322,13 @@
                             <div class="features-content"> 
                                 <h4><i class="fa fa-money"></i><span>Controle de pagamentos</span></h4>
                                 <p>Você tem acesso e controla todos os pagamentos efetuados por seus clientes.</p>
+                            </div>
+                        </div>
+
+                        <div class="col-md-4 col-sm-6 col-xs-12">
+                            <div class="features-content">
+                                <h4><i class="fa fa-envelope"></i><span>Emails em todos os processos</span></h4>
+                                <p>Em todas as etapas do processo de envio e cadastro de produtos os usuários e administradores sempre receberão emails informativos.</p>
                             </div>
                         </div>
                     </div>	
